--- a/ScheduleProject/build.gradle
+++ b/ScheduleProject/build.gradle
@@ -25,3 +25,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// Define versions in a single place
+ext {
+    // App dependencies
+    rxjava2Version = '2.1.9'
+    rxandroidVersion = '2.1.1'
+    butterKnifeVersion = '10.1.0'
+}
