--- a/ScheduleProject/app/src/main/AndroidManifest.xml
+++ b/ScheduleProject/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.UpdateTaskActivity"></activity>
-        <activity android:name=".activity.DetailTaskActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".activity.CreateTaskActivity">
+<!--        <activity android:name=".activity.UpdateTaskActivity"></activity>-->
+<!--        <activity android:name=".activity.DetailTaskActivity" />-->
+        <activity android:name=".activity.CreateTaskActivity" />
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
