--- a/ScheduleProject/app/src/main/AndroidManifest.xml
+++ b/ScheduleProject/app/src/main/AndroidManifest.xml
@@ -75,6 +75,8 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_provider_paths" />
         </provider>
+        <receiver android:name=".broadcast.NotifTaskBroadcast"/>
     </application>
+
 
 </manifest>
