--- a/ScheduleProject/app/build.gradle
+++ b/ScheduleProject/app/build.gradle
@@ -27,8 +27,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    //color picker
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
-
+    //bottom-navigation
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
 
     //add-------------------------
     implementation 'androidx.cardview:cardview:1.0.0'
