--- a/ScheduleProject/app/src/main/AndroidManifest.xml
+++ b/ScheduleProject/app/src/main/AndroidManifest.xml
@@ -17,14 +17,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.IntroActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            >
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+        <activity android:name=".activity.NotificationActivity"></activity>
+        <activity android:name=".activity.TodayTaskActivity" />
+        <activity
+            android:name=".activity.IntroActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity android:name=".activity.EditBoardActivity" />
         <activity android:name=".activity.CreateBoardActivity" />
