--- a/ScheduleProject/app/src/main/AndroidManifest.xml
+++ b/ScheduleProject/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.NotificationActivity"></activity>
+        <activity android:name=".activity.AboutUsActivity"></activity>
         <activity android:name=".activity.TodayTaskActivity" />
         <activity
             android:name=".activity.IntroActivity"
