--- a/ScheduleProject/app/build.gradle
+++ b/ScheduleProject/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -23,6 +24,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
@@ -31,6 +33,11 @@ dependencies {
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
     //bottom-navigation
     implementation 'com.google.android.material:material:1.1.0-alpha10'
+    // Firebase
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+    // Required only if Facebook login support is required
+    // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
+    implementation 'com.facebook.android:facebook-login:[5,6)'
 
     //add-------------------------
     implementation 'androidx.cardview:cardview:1.0.0'
