--- a/ScheduleProject/app/build.gradle
+++ b/ScheduleProject/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
 
     // For filter search
     implementation 'com.allattentionhere:fabulousfilter:0.0.5'
+
+    //for notification
+    implementation "com.android.support:support-compat:28.0.0"
 }
