--- a/ScheduleProject/app/src/main/AndroidManifest.xml
+++ b/ScheduleProject/app/src/main/AndroidManifest.xml
@@ -17,11 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".activity.EditBoardActivity" />
         <activity android:name=".activity.CreateBoardActivity" />
         <activity android:name=".activity.BoardActivity">
-
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,6 +29,7 @@
 
         </activity>
         <activity android:name=".activity.CreateTaskActivity">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,14 +38,19 @@
             </intent-filter>
             -->
         </activity>
-        <activity android:name=".activity.ViewTaskActivity">
+        <activity android:name=".activity.ViewTaskActivity"
+            android:parentActivityName=".activity.BoardActivity">
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            -->
         </activity>
-        <activity android:name=".activity.UpdateTaskActivity">
+        <activity android:name=".activity.UpdateTaskActivity"
+            android:parentActivityName=".activity.BoardActivity">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,7 +60,6 @@
             -->
         </activity>
         <activity android:name=".activity.MainActivity">
-
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -75,8 +78,8 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_provider_paths" />
         </provider>
-        <receiver android:name=".broadcast.NotifTaskBroadcast"/>
-    </application>
 
+        <receiver android:name=".broadcast.NotifTaskReceiver" />
+    </application>
 
 </manifest>
