--- a/ScheduleProject/app/build.gradle
+++ b/ScheduleProject/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     // Required only if Facebook login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
     implementation 'com.facebook.android:facebook-login:[5,6)'
+    //About Us Library
+    implementation 'com.github.medyo:android-about-page:1.1.1'
 
     //add-------------------------
     implementation 'androidx.cardview:cardview:1.0.0'
