--- a/ScheduleProject/app/build.gradle
+++ b/ScheduleProject/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
 
     // For filter search
     implementation 'com.allattentionhere:fabulousfilter:0.0.5'
+
+    //for drag and drop between ViewPager
+    implementation 'com.github.woxthebox:draglistview:1.7.0'
 }
